bk_ida/gccida/g1/reposition_prologue_and_epilogue_notes
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8337:4: error: expected ';' after expression
rtx last_insn; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8337:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8339:4: error: expected ';' after expression
rtx j; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8339:5: error: use of undeclared identifier 'j'
rtx j; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8340:4: error: expected ';' after expression
rtx v10; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8340:5: error: use of undeclared identifier 'v10'; did you mean 'v1'?
rtx v10; // r14 
    ^~~
    v1
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8331:26: note: 'v1' declared here
 struct varray_head_tag *v1; // r13 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8391:1: error: use of undeclared identifier 'last_insn'
last_insn = get_last_insn( ); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8392:6: error: use of undeclared identifier 'last_insn'
if ( last_insn ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8395:1: error: use of undeclared identifier 'j'
j = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8396:1: error: use of undeclared identifier 'v10'
v10 = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8399:17: error: use of undeclared identifier 'last_insn'
if ( *( _WORD *)last_insn == 37 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8401:6: error: use of undeclared identifier 'last_insn'
if ( last_insn[2].fld[0].rtint == -89 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8402:1: error: use of undeclared identifier 'j'
j = last_insn; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8402:5: error: use of undeclared identifier 'last_insn'
j = last_insn; 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8404:21: error: use of undeclared identifier 'last_insn'
else if ( contains( last_insn, v8) ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8408:1: error: use of undeclared identifier 'v10'
v10 = last_insn; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8408:7: error: use of undeclared identifier 'last_insn'
v10 = last_insn; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8411:1: error: use of undeclared identifier 'v10'
v10 = last_insn; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/function.c:8411:7: error: use of undeclared identifier 'last_insn'
v10 = last_insn; 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reposition_prologue_and_epilogue_notes/src/obj/function.o] Error 1
